--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
