--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.8",
     "nookies": "^2.5.2",
     "react": "17.0.2",
