--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "react-test-renderer": "^18.0.0-rc.0-next-529dc3ce8-20220124"
   },
   "resolutions": {
     "styled-components": "^5"
