--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.0.8",
