--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^0.26.0",
 		"bootstrap": "^5.1.3",
 		"date-fns": "^2.28.0",
 		"jsonwebtoken": "^8.5.1",
@@ -15,6 +16,7 @@
 		"nookies": "^2.5.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-hook-form": "^7.27.1",
 		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
