--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@dicebear/avatars": "^4.10.2",
+		"@dicebear/croodles": "^4.10.2",
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"@hookform/resolvers": "^2.8.8",
+		"@mui/icons-material": "^5.4.4",
+		"@mui/material": "^5.4.4",
 		"axios": "^0.26.0",
 		"bootstrap": "^5.1.3",
 		"date-fns": "^2.28.0",
@@ -15,11 +22,14 @@
 		"next": "12.0.10",
 		"nookies": "^2.5.2",
 		"react": "17.0.2",
+		"react-big-calendar": "^0.38.9",
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.27.1",
-		"styled-components": "^5.3.3"
+		"styled-components": "^5.3.3",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^6.2.1",
 		"eslint": "8.7.0",
 		"eslint-config-next": "12.0.8",
 		"react-test-renderer": "^18.0.0-rc.0-next-529dc3ce8-20220124"
