--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.27.1",
 		"styled-components": "^5.3.3",
+		"swr": "^1.2.2",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
